Fixed application closing, added ability to pick new city for the main form. Improved widget button colors

--- a/Weather_Broadcast/Weather_Broadcast/MainWeatherForm.resx
+++ b/Weather_Broadcast/Weather_Broadcast/MainWeatherForm.resx
@@ -288,6 +288,6 @@
 </value>
   </data>
   <data name="dailyDetailsControl1.WindValue" xml:space="preserve">
-    <value>0km/h KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H</value>
+    <value>0km/h KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H KM/H</value>
   </data>
 </root>
